added comment_older_than_5_minutes check to my_comments

--- a/templates/pybin/my_comments.html
+++ b/templates/pybin/my_comments.html
@@ -32,11 +32,13 @@
                                            class="btn btn-danger"
                                            type="submit">delete</a>
                                     </td>
-                                    <td>
-                                        <a href="/edit/{{ comment.uuid_hash }}"
-                                           class="btn btn-success"
-                                           type="submit">edit</a>
-                                    </td>
+                                    {% if not comment_older_than_5_minutes(comment) %}
+                                        <td>
+                                            <a href="/edit/{{ comment.uuid_hash }}"
+                                               class="btn btn-success"
+                                               type="submit">edit</a>
+                                        </td>
+                                    {% endif %}
                                 {% endif %}
                             </tr>
                         {% endfor %}
