added my messages route

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -42,7 +42,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="/messages/">
                                     <i class="fa fa-inbox" aria-hidden="true"></i>
                                     MY MESSAGES
                                 </a>
